src/style/themes/kids-first/_theme.template.scss
@import '~@ferlab/ui/themes/default/theme.template';
@import 'src/style/themes/kids-first/colors';
@import 'src/style/themes/kids-first/layout';

$font-weight-semibold: 500;
$font-weight-bold: 600;

$heading-color: $geekblue-7;

// Query Builder
$query-default-action-default-color: $gray-8;
$query-default-action-hover-color: $gray-8;
$query-default-action-focus-color: $gray-8;

$query-builder-header-tools-icon-color: $cyan-7;
$query-builder-header-tools-icon-hover: $cyan-7;
$query-builder-header-tools-icon-focus: $cyan-7;
$query-builder-header-tools-icon-color-dirty: $orange-7;

$query-builder-bg: $gray-1;
$query-builder-border-color: $gray-4;
$query-builder-header-border-divider-color: $gray-4;

$query-bar-bg: $gray-2;
$query-bar-bg-active: $cyan-1;
$query-bar-border-color: $gray-4;
$query-bar-border-color-active: $cyan-3;

$query-bar-identifier: $gray-6;
$query-bar-identifier-active: $cyan-6;

$query-pill-bg: $gray-4;
$query-pill-bg-active: $cyan-2;

$query-pill-button-default-color: $query-default-action-default-color;
$query-pill-button-hover-color: $query-default-action-hover-color;
$query-pill-button-focus-color: $query-default-action-hover-color;

$query-icon-operator-color: $gray-8;
$query-text-operator-color-hover: $gray-8;
$query-icon-operator-color-hover: $gray-8;
$query-icon-label-operator-color: $gray-8;

$query-combiner-button-default-color: $query-default-action-default-color;
$query-combiner-button-hover-color: $query-default-action-hover-color;
$query-combiner-button-focus-color: $query-default-action-hover-color;

// Filters
$checkbox-filter-actions-separator-links: $blue-8;
$filter-actions-border-color: $gray-4;
$toggle-filter-sc-button-color: $cyan-7;

// SidebarMenu
$sidebar-login-width: 573px;

$sidebar-menu-width: 180px;
$sidebar-menu-collapsed-width: 50px;
$sidebar-menu-background-color: $cyan-7;
$sidebar-menu-toggle-icon-size: 21px;

$sidebar-menu-item-icon-size: 20px;
$sidebar-menu-item-height: 50px;
$sidebar-menu-item-text-color: $gray-1;
$sidebar-menu-item-active-background-color: $cyan-8;
$sidebar-menu-item-active-color: $gray-1;
$sidebar-menu-item-hover-color: $gray-1;
$sidebar-menu-item-hover-opacity: 0.8;
$sidebar-menu-item-border-focus: none;
$sidebar-menu-item-border-focus-color: $gray-1;

$sidebar-quick-filter-input-box-shadow-hover: 0 0 0 2px $blue-8;
$sidebar-quick-filter-input-box-shadow-focus: 0 0 0 2px $gray-8, 0 0 0 3px $gray-1;
$sidebar-quick-filter-input-placeholder-color: $gray-6;
$sidebar-quick-filter-input-text-color: $gray-8;

$sidebar-content-panel-padding: 16px;
$sidebar-content-panel-width: 320px;
$sidebar-content-panel-close-icon-color: $gray-8;
$sidebar-content-panel-right-border: 1px solid $gray-5;
$sidebar-content-panel-background-color: transparent;
$sidebar-content-panel-close-icon-width: 16px;

// TODO Set variables see: https://github.com/Ferlab-Ste-Justine/ferlab-ui/blob/master/packages/style/themes/default/_theme.template.scss

$grid-card-light-background-color: white;
$grid-card-shade-background-color: $gray-2;

// EMPTY
$empty-image-color: rgba(red($gray-6), green($gray-6), blue($gray-6), 50%);
$empty-content-color: $gray-6;

// Collapse
$collapse-light-background-color: white;
$collapse-shade-background-color: $gray-3;
$collapse-header-border-color: $gray-4;

// ProLabel
$prolabel-required-mark-color: $red-8;

// UploadIds
$file-upload-item-color: $blue-8;

// Data release
$data-release-icon-font-size: 20px;

// Variant Entity
$canonical-icon-color: $cyan-7;
$summary-bg-color: $gray-3;

// Maintenance
$maintenance-page-bg: $gray-3;
$maintenance-page-title: $geekblue-7;
$maintenance-page-subtitle: $gray-8;

// color tag default
$color-tag-default-bg: $gray-4;
$color-tag-default-color: $gray-8;

// color tag family
$color-tag-boolean-true-bg: $green-2;
$color-tag-boolean-true-color: $green-8;

// color tag gender
$color-tag-gender-female-bg: $magenta-2;
$color-tag-gender-female-color: $magenta-8;
$color-tag-gender-male-bg: $blue-2;
$color-tag-gender-male-color: $blue-9;

// color tag family
$color-tag-family-bg: $cyan-2;
$color-tag-family-color: $cyan-8;

// color tag position
$color-tag-position-proband-bg: $purple-2;
$color-tag-position-proband-color: $purple-8;

// color tag vital status
$color-tag-vital-status-alive-bg: $green-2;
$color-tag-vital-status-alive-color: $green-8;
$color-tag-vital-status-deceased-bg: $red-2;
$color-tag-vital-status-deceased-color: $red-8;

// color tag interpretation
$color-tag-interpretation-observed-bg: $green-2;
$color-tag-interpretation-observed-color: $green-8;

// color tag pathegenic
$color-tag-pathogenic-bg: $red-2;
$color-tag-pathogenic-color: $red-8;

// color tag benign
$color-tag-benign-bg: $green-2;
$color-tag-benign-color: $green-8;

// graph
$chart-title-color: $geekblue-7;

